make sure the scrollbar is above everything

--- a/src/documents/guideguide/css/_base.scss
+++ b/src/documents/guideguide/css/_base.scss
@@ -82,7 +82,7 @@ a {
   bottom: 0;
   right: 0;
   width: 12px;
-  z-index: 10;
+  z-index: 30;
   padding-bottom: 48px;
   opacity: 0;
   -webkit-transition: opacity .2s;
